Create users app + add templates login and registration

--- a/products/templates/products/catalog.html
+++ b/products/templates/products/catalog.html
@@ -1,4 +1,4 @@
-{%extends "main/base.html"%}
+{% extends "base.html"%}
 {% load static %}
 {% load product_tags %}
 
@@ -19,7 +19,6 @@
   <div class="row">
     <div class="col-lg-3 col-md-4">
       <div class="sidebar">
-
         <button class="btn w-100 text-start collapse-filters-btn mb-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFilters" aria-expanded="false" aria-controls="collapseExample">
           <img src="{% static "assets/img/filter.svg" %}" alt="filter" width="20px">Фільтри
         </button>
@@ -138,17 +137,7 @@
           <div class="col-12">
             <h2 class="section-title-catalog"><span>
               {% if  request.GET.q %} Результати по запиту "{{request.GET.q}}"
-              {% if  not products %} - По запиту нічого не знайдено <!DOCTYPE html>
-              <html lang="en">
-              <head>
-                <meta charset="UTF-8">
-                <meta name="viewport" content="width=device-width, initial-scale=1.0">
-                <title>Document</title>
-              </head>
-              <body>
-                
-              </body>
-              </html>
+              {% if  not products %} - По запиту нічого не знайдено 
               {% endif %}
               {% endif %}</span></h2>
           </div>
