--- a/templates/base.html
+++ b/templates/base.html
@@ -62,7 +62,7 @@
                                 <img src="{% static "assets/img/cart.svg" %}" width=30px>
                                 <span class="badge text-bg-danger"></span>
                               </a>
-                            <a href="cart.html" class="btn">
+                            <a href="{% url "user:login" %}" class="btn">
                                 <img src="{% static "assets/img/user.svg" %}" width=30px>
                                 <span class="badge text-bg-danger"></span>
                             </a>
