--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -31,35 +31,36 @@
           <h2 class="section-title-login"><span>АВТОРИЗАЦІЯ</span></h2>
           <div class="row">
             <div class="col-md-6 offset-md-3">
-              <form action="" class="needs-validation" novalidate>
-
+              <form action="{% url "user:login" %}" method="POST" class="needs-validation" novalidate>
+                {% csrf_token %}
+                {% include "includes/notifications.html" %}
                 <div class="lg-3">
-                  <label for="email" class="form-label">Email</label>
-                  <input type="email" class="form-control" id="email" placeholder="name@example.com" required>
+                  <label for="id_username" class="form-label">Логін</label>
+                  <input type="username" class="form-control" value="{% if form.username.value %}{{form.username.value}}{% endif %}" name="username" id="id_username" placeholder="Введіть логін" required>
                   <div class="invalid-feedback">
-                    Введіть коректний Email - name@example.com
+                    Введіть логін користувача
                   </div>
                 </div>                   
 
                 <div class="lg-3">
-                  <label for="password" class="form-label">Пароль</label>
-                  <input type="password" class="form-control" id="password" placeholder="Пароль" required>
+                  <label for="id_password" class="form-label">Пароль</label>
+                  <input type="password" class="form-control" name="password" id="id_password" placeholder="Введіть пароль" required>
                   <div class="invalid-feedback">
-                    Введіть пароль
+                    Введіть пароль користувача
                   </div>
-                  <div class="forgot-pass text-end"><a href="">Забули пароль ?</a><a href="{% url "user:registration" %}">Створити аккаунт</a></div> 
+                  <div class="forgot-pass text-end"><a href="">Забули пароль ?</a><a href={% url "users:registration" %}>Створити аккаунт</a></div> 
                 </div>
-                
                 <div class="lg-3 text-center">
                   <button type="submit" class="btn">Авторизуватись</button>
                 </div>
                 <div class="another-login text-center">
                 <p>АБО АВТОРИЗУЙТЕСЬ ЧЕРЕЗ</p>
+                
                 <button type="submit" class="btn auth">
-                  <img src="{% static "/assets/img/google.svg"%}" alt="" width="20px"> Google
+                  <img src={% static "assets/img/google.svg" %} alt="" width="20px"> Google
                 </button>
-              </div>
-              </form>
+              </div> 
+              </form>            
             </div>
           </div>
       </div>
