--- a/products/templates/products/catalog.html
+++ b/products/templates/products/catalog.html
@@ -216,19 +216,19 @@
             <ul class="pagination">
 
               <li class="page-item {% if not products.has_previous %} disabled {% endif %}">
-                <a class="page-link" href="{% if products.has_previous %}?{%change_params page=products.previous_page_number%}{% else %}#{% endif %}"><<</a>
+                <a class="page-link" href="{% if products.has_previous %}?page={{ products.previous_page_number }}{% if query_params %}&{{ query_params }}{% endif %}{% else %}#{% endif %}"><<</a>
               </li>
 
               {% for page in products.paginator.page_range %}
               {% if page >= products.number|add:-2 and page <= products.number|add:2 %}
               <li class="page-item {% if products.number == page %} active {% endif %}">
-                <a class="page-link" href="?{%change_params page=page%}">{{page}}</a>
+                <a class="page-link" href="?page={{ page }}{% if query_params %}&{{ query_params }}{% endif %}">{{page}}</a>
               </li>
               {% endif %}
               {% endfor %}  
 
               <li class="page-item {% if not products.has_next %} disabled {% endif %}">
-                <a class="page-link" href="{% if products.has_next %}?{%change_params page=products.next_page_number%}{% else %}#{% endif %}">>></a>
+                <a class="page-link" href="{% if products.has_next %}?page={{ products.next_page_number }}{% if query_params %}&{{ query_params }}{% endif %}{% else %}#{% endif %}">>></a>
               </li>
             </ul>
           </nav>
