--- a/templates/base.html
+++ b/templates/base.html
@@ -39,7 +39,7 @@
                                 </button>
                                 <ul class="dropdown-menu">
                                     <li>
-                                        <a class="dropdown-item" href="#" >ENG</a>
+                                        <a class="dropdown-item" href="#" >UA</a>
                                     </li>
                                 </ul>    
                             </div>
@@ -56,16 +56,16 @@
                         </div>               
                         <div class="col-6 col-lg-4 order-lg-2 cart-buttons text-end">
                             <a href="#" class="btn">
-                                <img src="{% static "assets/img/heart.svg" %}" width=30px>
+                                <img src="{% static "assets/img/heart.svg" %}" width=35px>
                                 <span class="badge text-bg-danger"></span>
                             </a>
-                            <a href="cart.html" class="btn">
-                                <img src="{% static "assets/img/cart.svg" %}" width=30px>
+                            <a href="{% url "user:user_cart" %}" class="btn">
+                                <img src="{% static "assets/img/cart.svg" %}" width=35px>
                                 <span class="badge text-bg-danger"></span>
                               </a>
-                            <a href="{% if user.is_authenticated %}{% url "user:profile" %}{% else %}{% url "user:login" %}{% endif %}" class="btn">
-                                <img src="{% static "assets/img/user.svg" %}" width=30px>
-                                <span class="badge text-bg-danger"></span>
+                            <a {% if user.is_authenticated %} href="{% url "user:profile" %}" {% else %} data-bs-target="#exampleModalToggle" data-bs-toggle="modal"{% endif %} class="btn">
+                                <img src="{% static "assets/img/user.svg" %}" width=35px>
+                                <span class="badge text-bg-danger">{% if user.is_authenticated %}{{user.first_name}} {{user.last_name}}{% else %}Авторизуватись{% endif %}</span>
                             </a>
                         </div>
                         <div class="col-lg-4  order-lg-1 text-end">
@@ -134,6 +134,53 @@
         </header>
         <main class="main">
           {% include "includes/notifications.html" %}
+          <div class="modal fade" id="exampleModalToggle" aria-hidden="true" aria-labelledby="exampleModalToggleLabel" tabindex="-1">
+            <div class="modal-dialog modal-dialog-centered">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h1 class="modal-title" id="exampleModalToggleLabel">Авторизація</h1>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                  <form action="{% url "user:login"%}" method="POST" class="needs-validation" novalidate>
+                    {% csrf_token %}
+                    {% if request.GET.next %}
+                      <input type="hidden" name="next" value={{request.GET.next}}>
+                    {% endif %}
+                    {% include "includes/notification_login.html" %}
+                    <div class="lg-3">
+                      <label for="id_email" class="form-label">Email</label>
+                      <input type="email" class="form-control" value="{% if form.username.value %}{{form.username.value}}{% endif %}" name="username" id="id_email" placeholder="Введіть email" required>
+                      <div class="invalid-feedback">
+                        Невірний Email !
+                      </div>
+                    </div>                   
+    
+                    <div class="lg-3">
+                      <label for="id_password" class="form-label">Пароль</label>
+                      <input type="password" class="form-control" name="password" id="id_password" placeholder="Введіть пароль" required>
+                      <div class="invalid-feedback">
+                        Введіть пароль користувача !
+                      </div>
+    
+                      <div class="forgot-pass text-end"><a href="">Забули пароль ?</a><a href={% url "users:registration" %}>Створити аккаунт</a></div> 
+                    </div>
+                    <div class="lg-3 text-center">
+                      <button type="submit" class="btn">Авторизуватись</button>
+                    </div>
+                    <div class="another-login text-center">
+                    <p>АБО АВТОРИЗУЙТЕСЬ ЧЕРЕЗ</p>
+            
+                    <button type="submit" class="btn auth">
+                      <img src={% static "assets/img/google.svg" %} alt="" width="20px"> Google
+                    </button>
+                  </div> 
+                  </form>
+                </div>
+              </div>
+            </div>
+          </div>
+
           {% block content %}
           {% endblock content %}
         </main>
