Add cart view and tag

--- a/products/templates/products/product.html
+++ b/products/templates/products/product.html
@@ -50,9 +50,9 @@
         <div class="product-add2cart">
           <div class="input-group">
             <input type="number" class="form-control" value="1" min="1">
-            <button class="btn">
-              <img src="{% static "assets/img/cart-solid.svg"%}" alt="" width="30px"> Додати в корзину
-            </button>
+            <a href="{% url "cart:cart_add" product.slug%}" class="btn">
+              <img src="{% static "assets/img/cart-solid.svg"%}" alt="" width="30px"> Додати в кошик
+            </a>
             <div class="product-price">{{product.sell_price}}<div class="currency">ГРН</div></div>
           </div>
         </div>
