--- a/users/templates/users/users_cart.html
+++ b/users/templates/users/users_cart.html
@@ -3,61 +3,63 @@
 
 {% block content %}
 <div class="container-fluid">
-    <div class="row">
-        <div class="col-12">
-            <nav class="breadcrums">
-                <ul>
-                    <li><a href="index.html">Головна</a></li>
-                    <li><a href="index.html">магазин</a></li>
-                    <li><span>Сatalog name</span></li>
-                </ul>
-            </nav>
-        </div>
+  <div class="row">
+    <div class="col-12">
+      <nav class="breadcrums">
+        <ul>
+          <li><a href="index.html">Головна</a></li>
+          <li><a href="index.html">магазин</a></li>
+          <li><span>Сatalog name</span></li>
+        </ul>
+      </nav>
     </div>
+  </div>
 </div>
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-lg-8 mb-3">
-          <div class="cart-content p-3">
-            <div class="section-title-cart">Кошик<span class="badge text-bg-danger">1</span></div>
-            <div class="product-cart">
-              <div class="row"> 
-                <div class="product-img col-sm-4"><a href=""><img src="assets/img/products/modulna-kuhna-grafitigallery.jpg" alt=""></a></div>
-                <div class="prdouct-info col-sm-4 mt-4">
-                  <h1>Product name</h1>
-                  <ul>
-                    <li>Код товару: <span>P_00001</span></li>
-                    <li>Матеріал: <span>ЛДСП 16 мм</span></li>
-                    <li>Колір: <span>Сірий</span></li>
-                    <li>Стиль: <span>Лофт</span></li>
-                  </ul>
-                  <div class="ch-qty d-flex flex-diraction-column align-items-center  ">
-                    <button class="btn">-</button>
-                    <div class="qty">1</div>
-                    <button class="btn">+</button>
-                  </div>
-                </div>
-                <div class="col-sm-4 d-flex flex-column justify-content-between align-items-end">
-                    <button class="btn btn-close btn-lg order-sm-1 order-2"></button>
-                    <div class="product-price order-sm-2 order-1">5 200<div class="currency">ГРН</div></div>
-                </div>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-lg-8 mb-3">
+      <div class="cart-content p-3">
+        <div class="section-title-cart">Кошик<span class="badge text-bg-danger">{{carts.total_quantity}}</span></div>
+        {% for cart in carts %}
+        <div class="product-cart">
+          <div class="row">
+            <div class="product-img col-sm-4"><a href="{% url "catalog:product" cart.product.slug %}"><img
+                  src="{{cart.product.image.url}}" alt=""></a></div>
+            <div class="prdouct-info col-sm-4 mt-4">
+              <a href="{% url "catalog:product" cart.product.slug %}"><h1>{{cart.product.name}}</h1></a>
+              <ul>
+                <li>Код товару: <span>{{cart.product.id}}</span></li>
+                <li>Матеріал: <span>{{cart.product.material}}</span></li>
+                <li>Колір: <span>{{cart.product.color}}</span></li>
+                <li>Стиль: <span>{{cart.product.style}}</span></li>
+              </ul>
+              <div class="ch-qty d-flex flex-diraction-column align-items-center  ">
+                <button class="btn">-</button>
+                <div class="qty">{{cart.quantity}}</div>
+                <button class="btn">+</button>
+              </div>
+            </div>
+            <div class="col-sm-4 d-flex flex-column justify-content-between align-items-end">
+              <a href="{% url "cart:cart_remove" 1 %}" class="btn btn-close btn-lg order-sm-1 order-2"></a>
+              <div class="product-price order-sm-2 order-1">{{cart.products_price}}<div class="currency">ГРН</div>
+              </div>
             </div>
           </div>
         </div>
-        
-        </div>
-        <div class="col-lg-4 mb-3">
-          <div class="cart-summary">
-            <div class="section-title-summary">Всього</div>
-            <ul>
-              <li> <span>Товари :</span> <span>1</span></li>
-              <li><span>Загальна сума:</span> <span>5200 грн</span></li>
-            </ul>
-            <div class="total">Оплата<span> 5200 грн</span></div>
-            <button class="btn">Оформити замовлення</button>
-          </div>
-        </div>
+        {% endfor %}
       </div>
     </div>
-
+    <div class="col-lg-4 mb-3">
+      <div class="cart-summary">
+        <div class="section-title-summary">Всього</div>
+        <ul>
+          <li> <span>Товари :</span><span>{{carts.total_quantity}}</span></li>
+          <li><span>Загальна сума:</span><span>{{carts.total_price}} грн</span></li>
+        </ul>
+        <div class="total">Оплата<span>{{carts.total_price}} грн</span></div>
+        <button class="btn">Оформити замовлення</button>
+      </div>
+    </div>
+  </div>
+</div>
 {% endblock %}
