--- a/users/templates/users/users_cart.html
+++ b/users/templates/users/users_cart.html
@@ -19,7 +19,7 @@
   <div class="row">
     <div class="col-lg-8 mb-3">
       <div class="cart-content p-3">
-        <div class="section-title-cart">Кошик<span class="badge text-bg-danger">{{carts.total_quantity}}</span></div>
+        <div class="section-title-cart">Кошик{% if carts %}<span class="badge text-bg-danger">{{carts.total_quantity}}</span>{% else %} пустий  ;){% endif %}</div>
         {% for cart in carts %}
         <div class="product-cart">
           <div class="row">
@@ -40,7 +40,7 @@
               </div>
             </div>
             <div class="col-sm-4 d-flex flex-column justify-content-between align-items-end">
-              <a href="{% url "cart:cart_remove" 1 %}" class="btn btn-close btn-lg order-sm-1 order-2"></a>
+              <a href="{% url "cart:cart_remove" cart.id %}" class="btn btn-close btn-lg order-sm-1 order-2"></a>
               <div class="product-price order-sm-2 order-1">{{cart.products_price}}<div class="currency">ГРН</div>
               </div>
             </div>
@@ -57,7 +57,9 @@
           <li><span>Загальна сума:</span><span>{{carts.total_price}} грн</span></li>
         </ul>
         <div class="total">Оплата<span>{{carts.total_price}} грн</span></div>
+        {% if carts %}
         <button class="btn">Оформити замовлення</button>
+        {% endif %}
       </div>
     </div>
   </div>
