--- a/templates/includes/notifications.html
+++ b/templates/includes/notifications.html
@@ -21,4 +21,7 @@
         </div>
         {% endif %}
     {% endfor %}
+    {% else %}
+    <div id="jq-notification" class="toast position-fixed start-50 translate-middle-x z-3 text-center align-items-center alert text-bg-success border-0 mt-3" role="alert">
+    </div>
 {% endif %}
