--- a/static/assets/css/main.css
+++ b/static/assets/css/main.css
@@ -49,7 +49,10 @@ img
 {
     box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.7); 
 }
-
+#jq-notification
+{
+    box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.7); 
+}
 .btn-close
 {
     --bs-btn-close-focus-shadow: white;
